@@ -334,7 +334,12 @@ art_semanticturkey.SPARQL = function() {
 };
 
 art_semanticturkey.semnavigation = function() {
-	art_semanticturkey.openUrl("http://127.0.0.1:1979/semantic_turkey/resources/graph.html");
+	var serverip = art_semanticturkey.Preferences.get("extensions.semturkey.server.ip", "127.0.0.1");
+	var serverport = art_semanticturkey.Preferences.get("extensions.semturkey.server.port", "1979");
+	//art_semanticturkey.openUrl("http://127.0.0.1:1979/semantic_turkey/resources/graph.html");
+	var graphURL = "http://" + serverip + ":" + serverport + "/semantic_turkey/resources/graph.html";
+	art_semanticturkey.Logger.debug("opening graph url: " + graphURL);
+	art_semanticturkey.openUrl(graphURL);
 };
 
 art_semanticturkey.chk_SaveCurrentProjectMenuitem = function(){
